--- a/Frontend/Admin/styles-super-admin.css
+++ b/Frontend/Admin/styles-super-admin.css
@@ -263,7 +263,7 @@ a {
     z-index: 1000; /* Asegúrate de que esté sobre todo */
 }
 
-.modal-content {
+.modal {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
@@ -273,7 +273,7 @@ a {
     position: relative;
 }
 
-.close-button {
+.close-btn {
     position: absolute;
     top: 10px;
     right: 10px;
